# Data_Pilot

./: README.md  agent_memory.json  agentic_data_scientist.py  cli.py  datapilot.py  generate_demo.py  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: tests.yml
agents/: planner.py  reflector.py
tests/: test_smoke_run.py
tools/: data_profiler.py  evaluation.py  modelling.py
