[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-data-scientist"
version = "1.0.0"
description = "An offline agentic ML pipeline with a Rich terminal UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "xgboost>=1.7",
    "rich>=13.0",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
ads = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
